--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.7",
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
